--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM vwiart/debian:1.0.0
+FROM debian:jessie
 MAINTAINER http://synapps.io/
 
 ENV LOCAL_USER=nginx
@@ -6,6 +6,8 @@ ENV LOCAL_GROUP=nginx
 
 RUN groupadd $LOCAL_GROUP && \
 	useradd -ms /bin/bash $LOCAL_USER -g $LOCAL_GROUP && \
+	apt-get update && \
+	apt-get upgrade && \
 	apt-get install -y nginx && \
 	rm -Rf /etc/nginx/sites-available && \
 	rm -Rf /etc/nginx/sites-enabled && \
