Update on base-debian : adding vim deps

--- a/base-debian/Dockerfile
+++ b/base-debian/Dockerfile
@@ -3,5 +3,5 @@ MAINTAINER synapps.io
 
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
-	apt-get install -y curl
+	apt-get install -y curl vim
 #	apt-get install -y curl apparmor-profiles apparmor-utils
