More clear example

--- a/nginx-proxy/conf.d/example.conf
+++ b/nginx-proxy/conf.d/example.conf
@@ -3,6 +3,6 @@ server {
     server_name  www.myhost.com;
 
     location / {
-        proxy_pass   http://ip-to-container:container-port/;
+        proxy_pass   http://container-name:container-port/;
     }
 }
